# paperclip-uiux-factory-public

./: .gitignore  README.md
factory/: AGENTS.md  DESIGN.md  README.md
hermes-paper/: README.md  pyproject.toml
hermes-paper/scripts/: paper-auto-research.sh  paper-opportunity-monitor.sh  paper_daily_summary.py
hermes-paper/src/paper_engine/: __init__.py  __main__.py  adaptive.py  api_models.py  binance.py  cli.py  discord.py  flip.py  freshness.py  http_client.py  journal.py  journal_cli.py  journal_payloads.py  journal_sqlite.py  journal_store.py  journal_time.py  journal_types.py  ledger.py  liquidation_stream.py  micro.py  models.py  news.py  opportunity.py  positions.py  promotion_bundle.py  promotion_bundle_sources.py  reporting.py  research_assessment.py  research_format.py  research_gate.py  research_promotion.py  research_promotion_gate.py  research_promotion_schema.py  research_types.py  runner.py  shadow.py  status.py  status_payload.py  strategy.py
hermes-paper/systemd/: paper-auto-research.service  paper-opportunity-monitor.service
hermes-paper/tests/: test_adaptive.py  test_binance.py  test_cli_status.py  test_discord.py  test_journal.py  test_opportunity.py  test_promotion_bundle.py  test_reporting.py  test_research_gate.py  test_strategy.py  test_systemd_wrappers.py
hermes-paper/tests/fixtures/promotion/complete/paper/data/: paper_report.json
hermes-paper/tests/fixtures/promotion/complete/reports/: tan_promotion_hunter_latest.json
hermes-paper/tests/fixtures/promotion/missing_oos_pbo/reports/: tan_promotion_hunter_latest.json
(+70 files in other folders)
