[project]
name = "paper"
version = "0.1.0"
description = "Separated paper engine for TAN strategy shadow execution"
requires-python = ">=3.11"
dependencies = [
    "anyio>=4.0",
    "httpx2[http2,brotli,zstd]>=0.28",
    "pydantic>=2.0",
    "rich>=13.0",
    "typer>=0.12",
    "websockets>=16.0",
]

[project.scripts]
paper = "paper_engine.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/paper_engine"]

[dependency-groups]
dev = [
    "basedpyright>=1.21",
    "pytest>=8.0",
    "ruff>=0.12",
]

[tool.basedpyright]
typeCheckingMode = "all"
pythonVersion = "3.11"
pythonPlatform = "All"
include = ["src", "tests"]
exclude = ["**/__pycache__", "**/.venv", "**/build", "**/dist"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = [".omo"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "PL"]
ignore = ["PLR2004"]
